tests/unit/evaluation/minizinc/regression/bug69_1.err_exp
mzn2fzn:
  error: 
  bug69_1.mzn:9 
  In constraint. 
  In 'p' expression. 
  In argument 1. 
  Argument is out of range.
